# tug-of-minds

./: README.md
tug-of-minds/mindwave_driver/launch/: bluetooth_start2.launch
tug-of-minds/mindwave_driver/nodes/: mindwave_node.py  mindwave_node2.py
tug-of-minds/mindwave_driver/scripts/: mindwave_bluetooth.py
tug-of-minds/mindwave_teleop/: CMakeLists.txt  package.xml
tug-of-minds/mindwave_teleop/launch/: attention_game.launch  meditation_game.launch
tug-of-minds/mindwave_teleop/scripts/: attention_game.py  meditation_game.py  turtlebot_teleop_mindwave.py
tug-of-minds/ros_neural/: package.xml
